# syllabus

./: LICENSE  syllabus.org
renze/: .date.md.swp  command-line.md  csvkit.md  git.md  jq.md  markdown.md
renze/ML/Advice for Applying Machine Learning/: 评估算法与模型选择.md
renze/ML/ex/machine-learning-ex1/ex1/: CMakeLists.txt  computeCost.m  computeCostMulti.m  featureNormalize.m  gradientDescent.m  gradientDescentMulti.m  myex1.m  normalEqn.m  plotData.m  warmUpExercise.m
renze/ML/ex/machine-learning-ex2/ex2/: costFunction.m  costFunctionReg.m  octave-workspace  plotData.m  predict.m  sigmoid.m
renze/ML/ex/machine-learning-ex3/ex3/: ex3.m  lrCostFunction.m  oneVsAll.m  predict.m  predictOneVsAll.m
renze/commandLine/: command-line.md  sort_uniq.md
tianws/: gdb.md  git_notes.md  lane_confidence.md  shell.md  shell快捷键.md  tmux.md  vim_notes.md  单应矩阵.md  爬虫.md  美化shell.md
tianws/CS231N/: 图像分类.md
tianws/machine learning/: Advice_for_Applying_Machine_Learning.md  Clustering.md  Logistic_Regression.md  Neural_Network_Representation.md  Neural_Networks_Learning.md  Ng_ML_notes.md  SVM.md
